[tool.poetry]
name = "my-first-poetry"
version = "0.1.0"
description = ""
authors = ["benintw <chen.ben968@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
